@@ -57,6 +57,8 @@ Detailed changes:
 	- ADDED: UpdateMusicStream
 	- ADDED: SetMusicLooping
 	- ADDED: GetMusicLooping
+	- ADDED: DrawCapsule and DrawCapsuleWires
+	- ADDED: Free Camera3D example
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.4.0		Using Raylib 4.2
